--- a/index.html
+++ b/index.html
@@ -26,15 +26,7 @@
             font-weight: bold;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"
-        integrity="sha256-ErZ09KkZnzjpqcane4SCyyHsKAXMvID9/xwbl/Aq1pc=" crossorigin="anonymous"></script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"
-        integrity="sha256-xlxh4PaMDyZ72hWQ7f/37oYI0E2PrBbtzi1yhvnG+/E=" crossorigin="anonymous"></script>
-    <script src="daily_table.js"></script>
-    <script src="weekly_table.js"></script>
-    <script src="monthly_table.js"></script>
-    <script src="status_chart.js"></script>
+    <script src="built/status_chart.js"></script>
 </head>
 
 <body>
