Weekly updates and libcxx methodology change.

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                     and excluding only <b>cxx20</b>, <b>cxx23</b>, and <b>LWG</b> to avoid double-counting.
                 </li>
                 <li>(<span class="currentValue" id="currentValue-libcxx"></span>)
-                    <a href="https://github.com/microsoft/STL/blob/master/tests/libcxx/skipped_tests.txt">
-                        Skipped tests in the libcxx test suite.</a> There are many reasons for skipped tests:
+                    <a href="https://github.com/microsoft/STL/blob/main/tests/libcxx/expected_results.txt">
+                        Skipped/failing tests in the libcxx test suite.</a> There are many reasons for such tests:
                     STL bugs, test bugs, compiler bugs, missing STL features, missing compiler features, etc.
-                    To avoid double-counting, this chart excludes skipped tests due to missing STL features.
+                    To avoid double-counting, this line excludes missing STL features.
                 </li>
             </ul>
         </li>
